Add button to change user location
Add button to change user location. The change in the user location
will render new coins on the frontend

--- a/client/css/screen.css
+++ b/client/css/screen.css
@@ -112,6 +112,10 @@ span.response{
 	background-color: #dddddd;
 }
 
+.object{
+margin: 2px;
+}
+
 @media screen and (max-width: 900px) {
 	.half{
 		width: 100%;
